ingress/caddy-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: caddy-lb
  namespace: openfaas
  annotations:
    flux.weave.works/ignore: "true"
    prometheus.io.scrape: 'false'
  labels:
    app: caddy
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: caddy
